--- a/Layout/Sidebar.html
+++ b/Layout/Sidebar.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-
-
 </head>
 
 <body>
@@ -28,37 +26,34 @@
             <nav class="sidebar-nav scroll-sidebar" data-simplebar="">
                 <ul id="sidebarnav">
                     <li class="nav-small-cap">
-                        <iconify-icon icon="solar:home-2-line" class="nav-small-cap-icon fs-4"></iconify-icon>
+                        <iconify-icon icon="mdi:home-outline" class="nav-small-cap-icon fs-4"></iconify-icon>
                         <span class="hide-menu">Trang Chủ</span>
                     </li>
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="../index.html" aria-expanded="false">
-                            <i class="fas fa-chart-line"></i>
+                            <iconify-icon icon="mdi:monitor-dashboard" class="fs-4"></iconify-icon>
                             <span class="hide-menu">Tổng Quan</span>
                         </a>
                     </li>
 
-
-
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="javascript:void(0)" aria-expanded="false"
-                            data-bs-toggle="collapse" data-bs-target="#attributeMenu">
-                            <i class="fas fa-list"></i>
+                            data-bs-toggle="collapse" data-bs-target="#transactionMenu">
+                            <iconify-icon icon="mdi:cash-multiple" class="fs-4"></iconify-icon>
                             <span class="hide-menu">Quản lý giao dịch</span>
-                            <i class="fas fa-chevron-right arrow-icon"></i> <!-- Mũi tên -->
+                            <i class="fas fa-chevron-right arrow-icon"></i>
                         </a>
-                        <div id="attributeMenu" class="collapse">
+                        <div id="transactionMenu" class="collapse">
                             <ul class="sidebar-submenu">
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" href="../html/banhang.html" aria-expanded="false">
-                                        <i class="fas fa-shopping-cart"></i>
-                                        <!-- Hoặc fa-cash-register, fa-box-open, fa-store -->
+                                        <iconify-icon icon="mdi:cart-outline" class="fs-4"></iconify-icon>
                                         <span class="hide-menu">Bán Hàng</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" href="../html/donhang.html">
-                                        <iconify-icon icon="solar:palette-bold"></iconify-icon>
+                                        <iconify-icon icon="mdi:clipboard-text" class="fs-4"></iconify-icon>
                                         <span class="hide-menu">Quản lý đơn hàng</span>
                                     </a>
                                 </li>
@@ -67,52 +62,51 @@
                     </li>
 
                     <li class="nav-small-cap">
-                        <iconify-icon icon="solar:shopping-bag-line-duotone"
-                            class="nav-small-cap-icon fs-4"></iconify-icon>
+                        <iconify-icon icon="mdi:box" class="nav-small-cap-icon fs-4"></iconify-icon>
                         <span class="hide-menu">QUẢN LÝ SẢN PHẨM</span>
                     </li>
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="../html/sanpham.html" aria-expanded="false">
-                            <i class="fas fa-box"></i>
+                            <iconify-icon icon="mdi:package-variant-closed" class="fs-4"></iconify-icon>
                             <span class="hide-menu">Sản Phẩm</span>
                         </a>
                     </li>
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="javascript:void(0)" aria-expanded="false"
                             data-bs-toggle="collapse" data-bs-target="#attributeMenu">
-                            <i class="fas fa-list"></i>
+                            <iconify-icon icon="mdi:settings-outline" class="fs-4"></iconify-icon>
                             <span class="hide-menu">Thuộc Tính</span>
-                            <i class="fas fa-chevron-right arrow-icon"></i> <!-- Mũi tên -->
+                            <i class="fas fa-chevron-right arrow-icon"></i>
                         </a>
                         <div id="attributeMenu" class="collapse">
                             <ul class="sidebar-submenu">
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" href="../html/kichco.html">
-                                        <iconify-icon icon="solar:ruler-bold"></iconify-icon>
+                                        <iconify-icon icon="mdi:ruler" class="fs-4"></iconify-icon>
                                         <span class="hide-menu">Kích Cỡ</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" href="../html/mausac.html">
-                                        <iconify-icon icon="solar:palette-bold"></iconify-icon>
+                                        <iconify-icon icon="mdi:palette" class="fs-4"></iconify-icon>
                                         <span class="hide-menu">Màu Sắc</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" href="../html/thuonghieu.html">
-                                        <iconify-icon icon="solar:flag-bold"></iconify-icon>
+                                        <iconify-icon icon="mdi:flag" class="fs-4"></iconify-icon>
                                         <span class="hide-menu">Thương Hiệu</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" href="../html/chatlieu.html">
-                                        <iconify-icon icon="solar:tag-bold-duotone"></iconify-icon>
+                                        <iconify-icon icon="mdi:tag" class="fs-4"></iconify-icon>
                                         <span class="hide-menu">Chất Liệu</span>
                                     </a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a class="sidebar-link" href="../html/danhmuc.html">
-                                        <iconify-icon icon="mdi:folder"></iconify-icon> <!-- Thay đổi biểu tượng -->
+                                        <iconify-icon icon="mdi:folder" class="fs-4"></iconify-icon>
                                         <span class="hide-menu">Danh Mục</span>
                                     </a>
                                 </li>
@@ -120,64 +114,44 @@
                         </div>
                     </li>
 
-
                     <li class="nav-small-cap">
-                        <iconify-icon icon="solar:shopping-bag-line-duotone"
-                            class="nav-small-cap-icon fs-4"></iconify-icon>
+                        <iconify-icon icon="mdi:account-multiple" class="nav-small-cap-icon fs-4"></iconify-icon>
                         <span class="hide-menu">QUẢN LÝ Tài Khoản</span>
                     </li>
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="../html/nhanvien.html" aria-expanded="false">
-                            <i class="fas fa-user"></i>
+                            <iconify-icon icon="mdi:account" class="fs-4"></iconify-icon>
                             <span class="hide-menu">Nhân Viên</span>
                         </a>
                     </li>
 
-
                     <li class="nav-small-cap">
-                        <iconify-icon icon="solar:discount-bold" class="nav-small-cap-icon fs-4"></iconify-icon>
+                        <iconify-icon icon="mdi:tag-outline" class="nav-small-cap-icon fs-4"></iconify-icon>
                         <span class="hide-menu">Quản Lý Giảm Giá</span>
                     </li>
+
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="javascript:void(0)" aria-expanded="false"
-                            data-bs-toggle="collapse" data-bs-target="#discountMenu">
-                            <iconify-icon icon="solar:tag-horizontal-bold-duotone"></iconify-icon>
-                            <span class="hide-menu">Giảm Giá</span>
-                            <i class="fas fa-chevron-right arrow-icon"></i> <!-- Mũi tên -->
+                        <a class="sidebar-link" href="../html/voucher.html">
+                            <iconify-icon icon="mdi:voucher" class="fs-4"></iconify-icon>
+                            <span class="hide-menu">Voucher</span>
                         </a>
-                        <div id="discountMenu" class="collapse">
-                            <ul class="sidebar-submenu">
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" href="./ui-sizes.html">
-                                        <iconify-icon icon="solar:ticket-bold-duotone"></iconify-icon>
-                                        <span class="hide-menu">Voucher</span>
-                                    </a>
-                                </li>
-                                <li class="sidebar-item">
-                                    <a class="sidebar-link" href="./ui-colors.html">
-                                        <iconify-icon icon="solar:sale-bold-duotone"></iconify-icon>
-                                        <span class="hide-menu">Khuyến Mại</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
                     </li>
-                    <li class="nav-small-cap">
-                        <iconify-icon icon="solar:image-bold" class="nav-small-cap-icon fs-4"></iconify-icon>
+
+
+                    <!-- <li class="nav-small-cap">
+                        <iconify-icon icon="mdi:image-multiple" class="nav-small-cap-icon fs-4"></iconify-icon>
                         <span class="hide-menu">Thư Viện Ảnh</span>
                     </li>
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="../html/uploadAnh.html">
-                            <iconify-icon icon="solar:upload-bold"></iconify-icon>
+                            <iconify-icon icon="mdi:cloud-upload" class="fs-4"></iconify-icon>
                             <span class="hide-menu">Tải Ảnh Lên</span>
                         </a>
-                    </li>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </div>
     </aside>
-
 
     <!-- Bootstrap JS and other scripts -->
     <script src="../assets/js/main.js"></script>
@@ -186,10 +160,7 @@
     <script src="../assets/js/sidebarmenu.js"></script>
     <script src="../assets/js/app.min.js"></script>
     <script src="../assets/libs/apexcharts/dist/apexcharts.min.js"></script>
-    <script src="../assets/libs/simplebar/dist/simplebar.js"></script>
     <script src="../assets/js/dashboard.js"></script>
-    <!-- solar icons -->
-    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
 
 </html>
