--- a/RunFlexFE/public/views/detailproduct.html
+++ b/RunFlexFE/public/views/detailproduct.html
@@ -46,12 +46,12 @@
                                     <div class="product-gallery__thumbs thumb-fix">
 
                                         <div class="product-gallery__thumb  active" id="imgg1">
-                                            <a class="product-gallery__thumb-placeholder" href="javascript:void(0);" data-image="images/detailproduct/1.jpg" data-zoom-image="images/detailproduct/1.jpg">
-                                                <img src="images/detailproduct/1.jpg" data-image="images/detailproduct/1.jpg" alt="Nike Air Max 90 Essential" grape="">
+                                            <a class="product-gallery__thumb-placeholder" href="javascript:void(0);" data-image={{product.imgProduct}} data-zoom-image={{product.imgProduct}}>
+                                                <img src={{product.imgProduct}} data-image={{product.imgProduct}} alt="Nike Air Max 90 Essential" grape="">
                                             </a>
                                         </div>
 
-                                        <div class="product-gallery__thumb " id="imgg2">
+                                        <!-- <div class="product-gallery__thumb " id="imgg2">
                                             <a class="product-gallery__thumb-placeholder" href="javascript:void(0);" data-image="images/detailproduct/5.jpg" data-zoom-image="images/detailproduct/5.jpg">
                                                 <img src="images/detailproduct/5.jpg" data-image="images/detailproduct/5.jpg" alt="Nike Air Max 90 Essential" grape="">
                                             </a>
@@ -79,8 +79,8 @@
                                             <a class="product-gallery__thumb-placeholder" href="javascript:void(0);" data-image="images/detailproduct/3.jpg" data-zoom-image="images/detailproduct/3.jpg">
                                                 <img src="images/detailproduct/3.jpg" data-image="images/detailproduct/3.jpg" alt="Nike Air Max 90 Essential" grape="">
                                             </a>
-                                        </div>
-
+                                        </div> -->
+                                        <!-- 
                                         <div class="product-gallery__thumb " id="imgg7">
                                             <a class="product-gallery__thumb-placeholder" href="javascript:void(0);" data-image="images/detailproduct/8.jpg" data-zoom-image="images/detailproduct/8.jpg">
                                                 <img src="images/detailproduct/8.jpg" data-image="images/detailproduct/8.jpg" alt="Nike
@@ -92,7 +92,7 @@
                                             <a class="product-gallery__thumb-placeholder" href="javascript:void(0);" data-image="images/detailproduct/6.jpg" data-zoom-image="images/detailproduct/6.jpg">
                                                 <img src="images/detailproduct/6.jpg" data-image="images/detailproduct/6.jpg" alt="Nike Air Max 90 Essential" grape="">
                                             </a>
-                                        </div>
+                                        </div> -->
 
                                     </div>
                                 </div>
@@ -103,14 +103,14 @@
 
                                         <li class="product-gallery-item gallery-item
                         current " id="imgg1a">
-                                            <img class="product-image-feature " src="images/detailproduct/1.jpg" alt="Nike Air Max 90 Essential" grape="">
+                                            <img class="product-image-feature " src={{product.imgProduct}} alt="Nike Air Max 90 Essential" grape="">
                                         </li>
-
+                                        <!-- 
                                         <li class="product-gallery-item gallery-item " id="imgg2a">
                                             <img class="product-image-feature" src="images/detailproduct/5.jpg" alt="Nike Air Max 90 Essential" grape="">
-                                        </li>
+                                        </li> -->
 
-                                        <li class="product-gallery-item gallery-item " id="imgg3a">
+                                        <!-- <li class="product-gallery-item gallery-item " id="imgg3a">
                                             <img class="product-image-feature" src="images/detailproduct/2.jpg" alt="Nike Air Max 90 Essential" grape="">
                                         </li>
 
@@ -132,7 +132,7 @@
 
                                         <li class="product-gallery-item gallery-item " id="imgg8a">
                                             <img class="product-image-feature" src="images/detailproduct/6.jpg" alt="Nike Air Max 90 Essential" grape="">
-                                        </li>
+                                        </li> -->
 
                                     </ul>
                                     <div class="product-image__button">
