--- a/RunFlexFE/public/layout/header.html
+++ b/RunFlexFE/public/layout/header.html
@@ -168,7 +168,7 @@
         </div>
 
         <div class="icon-ol">
-            <a style="color: #272727" href="/signin">
+            <a style="color: #272727" href="/account">
                 <i class="fas fa-user-alt"></i>
             </a>
             <a href="#" class="" uk-toggle="target: #offcanvas-flip">
