--- a/RunFlexFE/public/views/account.html
+++ b/RunFlexFE/public/views/account.html
@@ -12,13 +12,13 @@
                             <div class="layered">
                                 <ul class="menu-items">
                                     <li>
-                                        <a href="#">
+                                        <a href="/userinfo">
                                             <i class="icon-user"></i>
                                             <span>Tài Khoản Của Tôi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="/account">
                                             <i class="icon-shopping-cart"></i>
                                             <span>Đơn Mua</span>
                                         </a>
