--- a/RunFlexFE/public/views/detailproduct.html
+++ b/RunFlexFE/public/views/detailproduct.html
@@ -319,7 +319,7 @@
                                             <button type="button" class="button btn-addtocart addtocart-modal" ng-click="oderProduct(productDetai)" ng-disabled="statusProduct === 'Hết Hàng'" ng-click="checkStock(statusProduct)">
                                                 Thêm vào
                                             </button>
-                                            <button type="button" class="buy-now button" style="display: block;" ng-disabled="statusProduct === 'Hết Hàng'" ng-click="checkStock(statusProduct)">Mua ngay</button>
+                                            <button type="button" class="buy-now button" style="display: block;" ng-disabled="statusProduct === 'Hết Hàng'" ng-click="buyNow(productDetai)" ng-click="checkStock(statusProduct)">Mua ngay</button>
                                             <!-- <button ng-click="removeProduct(productDetai)">Xóa sản phẩm</button> -->
                                         </div>
 
