--- a/RunFlexFE/public/views/buyNow.html
+++ b/RunFlexFE/public/views/buyNow.html
@@ -32,26 +32,26 @@
                 <th>Tạm tính</th>
             </tr>
         </thead>
-        <tbody ng-repeat="product in lstOrderProduct track by product.productDetai.id" ng-if="product.selected === true">
+        <tbody>
             <tr>
                 <td>
-                    <img src={{product.productDetai.imageURL}} alt="">
+                    <img src={{producBuyNow.imageURL}} alt="">
                 </td>
-                <td>{{product.productDetai.productName}} - Size: {{product.productDetai.sizeNumber}} - {{product.productDetai.colorName}} - Chất liệu: {{product.productDetai.materialName}}</td>
-                <td>{{product.quantity}}</td>
-                <td>{{product.productDetai.price}} đ</td>
-                <td>{{product.quantity * product.productDetai.price}} đ</td>
+                <td>{{producBuyNow.productName}} - Size: {{producBuyNowsizeNumber}} - {{producBuyNow.colorName}} - Chất liệu: {{producBuyNow.materialName}}</td>
+                <td>{{producBuyNow.quantityOder}}</td>
+                <td>{{producBuyNow.price}} đ</td>
+                <td>{{producBuyNow.quantityOder * producBuyNow.price}} đ</td>
             </tr>
 
         </tbody>
         <tfoot>
             <tr>
                 <th colspan="3" class="text-right">Tổng cộng:</th>
-                <td colspan="2">{{ getTotal() }} đ</td>
+                <td colspan="2">{{producBuyNow.quantityOder * producBuyNow.price}} đ</td>
             </tr>
         </tfoot>
     </table>
     <div class="text-center mt-4">
-        <button type="button" class="btn btn-primary" ng-click="submitPayment()">Xác nhận đặt hàng</button>
+        <button type="button" class="btn btn-primary" ng-click="buyNow()">Xác nhận đặt hàng</button>
     </div>
 </div>
